...

        var title: String {
            switch self {
            case .discovered:
                return "From Discovered Devices"
            case .manual:
                return "Manual"
            }
        }
    }

    struct CandidateNetwork: Identifiable {
        let gateway: String
...
